@startuml
skinparam classAttributeIconSize 0

class User {
  uuid id
  string name
  string email
  string password_hash
  string role
  datetime created_at
}

class Category {
  uuid id
  string name
  string description {optional}
}

class Product {
  uuid id
  uuid category_id
  string name
  text description
  decimal price
  integer stock_quantity
  string image_url {optional}
  boolean is_active
}

class Cart {
  uuid id
  uuid user_id
  datetime created_at
  datetime updated_at
}

class CartItem {
  uuid id
  uuid cart_id
  uuid product_id
  integer quantity
  decimal unit_price
}

class Order {
  uuid id
  uuid user_id
  string status
  decimal total_amount
  datetime created_at
}

class OrderItem {
  uuid id
  uuid order_id
  uuid product_id
  integer quantity
  decimal unit_price
}

class Payment {
  uuid id
  uuid order_id
  string method
  string status
  string transaction_reference {optional}
}

class Address {
  uuid id
  uuid user_id
  string line1
  string city
  string postal_code
  string country
}

class Review {
  uuid id
  uuid user_id
  uuid product_id
  integer rating
  text comment {optional}
}

User "1" -- "1" Cart : 1 to 1
Cart "1" -- "*" CartItem : 1 to many
Product "1" -- "*" CartItem : 1 to many
User "1" -- "*" Order : 1 to many
Order "1" -- "*" OrderItem : 1 to many
Product "1" -- "*" OrderItem : 1 to many
Order "1" -- "1" Payment : 1 to 1
Category "1" -- "*" Product : 1 to many
User "1" -- "*" Address : 1 to many
User "1" -- "*" Review : 1 to many
Product "1" -- "*" Review : 1 to many

@enduml